--- a/src/Output.css
+++ b/src/Output.css
@@ -5,4 +5,8 @@
   font-size: 32px;
   font-family: sans-serif;
   margin-bottom: 5px;
+  outline: none;
+  border: none;
+  -webkit-box-shadow: 0px 0px 22px 6px #988fff;
+  box-shadow: 0px 0px 22px 6px #988fff;
 }
